# EPCID

./: .gcloudignore  .gitignore  DASHBOARD_AUDIT_REPORT_2.md  DATA_SOURCES.md  DESIGN.md  Dockerfile  Dockerfile.backend  HACKATHON_STRATEGY.md  PAGES_TEST_REPORT_2.md  PAGES_TEST_REPORT_3.md  README.md  UI_DESIGN.md  alembic.ini  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  docker-compose.test.yml  docker-compose.yml  mypy_out.txt  mypy_output.txt  mypy_output3.txt  pyproject.toml  pyright.txt  pyright_output.txt  requirements.txt  tmp_fix_mypy.py  verify-results.json
.github/workflows/: backend.yml  cd.yml  ci.yml  frontend.yml
config/: agent_config.yaml  env.example  environment_config.yaml  logging_config.yaml  model_config.yaml
data/: .gitkeep
docs/: GOOGLE_CLOUD_PROOF.md
examples/: __init__.py  caregiver_flow.py
frontend/: .env.example  .eslintrc.json  Dockerfile  UI_STITCH_DESIGN.md  env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/voice-session/: route.ts
frontend/src/app/clinician/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/assess/: page.tsx
frontend/src/app/dashboard/care-advice/: page.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/dashboard/children/: page.tsx
frontend/src/app/dashboard/dosage/: page.tsx
frontend/src/app/dashboard/family/: page.tsx
frontend/src/app/dashboard/find-care/: page.tsx
frontend/src/app/dashboard/growth/: page.tsx
frontend/src/app/dashboard/help/: page.tsx
frontend/src/app/dashboard/medications/: page.tsx
frontend/src/app/dashboard/mental-health/: page.tsx
frontend/src/app/dashboard/night-vitals/: page.tsx
frontend/src/app/dashboard/reports/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/symptom-checker/: page.tsx
frontend/src/app/dashboard/symptoms/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ServiceWorkerRegistration.tsx
frontend/src/components/ui/: AIStatusIndicator.tsx  ActivityFeed.tsx  Badge.tsx  Button.tsx  Card.tsx  ClinicalAssessment.tsx  DemoModeBanner.tsx  DetectedEventCard.tsx  EmergencyBanner.tsx  ErrorBoundary.tsx  Input.tsx  Logo.tsx  PersonalizedBaselines.tsx  PhotoCapture.tsx  Skeleton.tsx  ThemeProvider.tsx  ThemeToggle.tsx  VelocityIndicator.tsx  index.ts
frontend/src/lib/: ai.ts  api.ts  demoData.ts  errors.ts  notifications.ts  utils.ts  voiceTriage.ts
frontend/src/store/: useStore.ts
migrations/: env.py
migrations/versions/: 20240115_0001_initial_schema.py
scripts/: init-db.sql  run.sh
src/: __init__.py
src/agents/: __init__.py  base_agent.py  escalation_agent.py  geo_exposure_agent.py  guideline_rag_agent.py  ingestion_agent.py  medication_safety_agent.py  phenotype_agent.py  risk_agent.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py  security.py
src/api/middleware/: __init__.py  rate_limit.py
src/api/routes/: __init__.py  ai_analysis.py  assessment.py  auth.py  care_advice.py  children.py  clinical_scoring.py  dosage.py  environment.py  external_data.py  guidelines.py  mental_health.py  symptom_checker.py  symptoms.py
src/clinical/: __init__.py  pews.py  phoenix_score.py  physical_exam.py  vital_signs.py
src/core/: __init__.py  decision_maker.py  executor.py  memory.py  planner.py  reasoning.py
src/data/: __init__.py  care_guides.json  dosage_tables.json  sample_data.py  symptoms.json  synthea_generator.py
src/db/: __init__.py  database.py  models.py
src/services/: __init__.py  air_quality_service.py  cache_service.py  cdc_service.py  fhir_service.py  medlineplus_service.py  openfda_service.py  vertex_ai_service.py  weather_service.py
src/utils/: __init__.py  explainability.py  logger.py  metrics.py  validator.py
tests/: __init__.py  test_agents.py  test_api.py
(+5 files in other folders)
